--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>ZeroVue</title>
+
+    <!-- TODO EMBED ALL EXTERNAL ASSETS INTO LOCAL PACKAGE -->
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/css/uikit.min.css" />
+
+    <!-- TODO Move to external css -->
     <style>
     body {
         margin: 0;
@@ -22,6 +26,8 @@
 
 <div id="app">
     <div uk-grid class="uk-grid-column-collapse">
+        <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #app-stage">Stage</button>
+
         <div>
             <button class="uk-button uk-button-primary uk-button-small" @click="home">
                 Home
@@ -36,6 +42,7 @@
             <button class="uk-button uk-button-danger uk-button-small">GO</button>
         </div>
 
+        <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #app-p0rtal">P0rtal</button>
     </div>
 
     <div align="center">
@@ -62,19 +69,41 @@
 
 </div>
 
+<div id="app-stage" uk-offcanvas="mode: reveal; overlay: true">
+    <div class="uk-offcanvas-bar">
+
+        <button class="uk-offcanvas-close" type="button" uk-close></button>
+
+        <h3>Zeronet Stage</h3>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+    </div>
+</div>
+
+<div id="app-p0rtal" uk-offcanvas="mode: reveal; overlay: true; flip: true">
+    <div class="uk-offcanvas-bar">
+
+        <button class="uk-offcanvas-close" type="button" uk-close></button>
+
+        <h3>User P0rtal</h3>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+    </div>
+</div>
+
+<!-- TODO EMBED ALL EXTERNAL ASSETS INTO LOCAL PACKAGE -->
 <!-- VueJS -->
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://unpkg.com/vuex@3.1.1/dist/vuex.js"></script>
-<!-- We need lodash.merge so get lodash first -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vuex-persist"></script>
 
 <!-- UIkit JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit-icons.min.js"></script>
 
 <!-- You can also require other files to run in this process -->
-<script src="./renderer.js"></script>
+<script src="./renderer/main.js"></script>
 
 </body>
 </html>
