--- a/src/index.html
+++ b/src/index.html
@@ -98,10 +98,11 @@
 <!-- TODO EMBED ALL EXTERNAL ASSETS INTO LOCAL PACKAGE -->
 <!-- VueJS -->
 <script src="https://cdn.0net.io/libs/vue/2.5.17/js/vue.min.js"></script>
-<!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
 <script src="https://unpkg.com/vuex@3.1.1/dist/vuex.js"></script>
 <script src="https://cdn.0net.io/libs/pouchdb/7.0.0/js/pouchdb.min.js"></script>
 <script src="https://cdn.0net.io/libs/sockjs-client/1.1.4/js/sockjs.min.js"></script>
+<script src="https://cdn.0net.io/libs/moment/2.22.2/js/moment.min.js"></script>
+<script src="https://cdn.0net.io/libs/numeral/2.0.6/js/numeral.min.js"></script>
 
 <!-- UIkit JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit.min.js"></script>
