A bit of refactoring.

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div>
-            <button class="uk-button uk-button-danger uk-button-small" @click="firstTest">GO</button>
+            <button class="uk-button uk-button-danger uk-button-small" @click="search">GO</button>
         </div>
 
         <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #app-p0rtal">P0rtal</button>
