--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,7 @@
 <script src="https://unpkg.com/vuex@3.1.1/dist/vuex.js"></script>
 <script src="https://cdn.0net.io/libs/pouchdb/7.0.0/js/pouchdb.min.js"></script>
 <script src="https://cdn.0net.io/libs/sockjs-client/1.1.4/js/sockjs.min.js"></script>
+<script src="https://cdn.0net.io/libs/ethers/4.0.7/js/ethers.min.js"></script>
 <script src="https://cdn.0net.io/libs/moment/2.22.2/js/moment.min.js"></script>
 <script src="https://cdn.0net.io/libs/numeral/2.0.6/js/numeral.min.js"></script>
 
