Allowing dynamic loading of page content.

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         margin: 0;
     }
     .zerovue {
-        border:1pt solid #999;
+        border:1pt solid #f99;
         display:inline-flex;
         width:640px;
         height:480px;
@@ -63,7 +63,7 @@
     </div>
 
     <webview
-        :src="mySource"
+        :src="webSource"
         :preload="preload"
         sandbox="true"
         class="zerovue">
