--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="uk-width-expand uk-margin-small-left uk-margin-small-right">
-            <input class="uk-input uk-form-small" type="text" placeholder="What next?">
+            <input class="uk-input uk-form-small" type="text" placeholder="Next p2p request?" v-model="query" @keyup.enter="search">
         </div>
 
         <div>
