--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit-icons.min.js"></script>
 
 <!-- You can also require other files to run in this process -->
-<script src="./renderer/main.js"></script>
+<script src="./main.js"></script>
 
 </body>
 </html>
