More refactoring, plus added toasts.

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <!-- https://getuikit.com/docs/introduction -->
 
     <!-- TODO EMBED ALL EXTERNAL ASSETS INTO LOCAL PACKAGE -->
-    <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/css/uikit.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/vue-snotify@latest/styles/material.css" />
 
     <!-- TODO Move to external css -->
     <style>
@@ -69,6 +69,7 @@
         class="zerovue">
     </webview>
 
+    <vue-snotify></vue-snotify>
 </div>
 
 <div id="app-stage" uk-offcanvas="mode: reveal; overlay: true">
@@ -104,6 +105,7 @@
 <script src="https://cdn.0net.io/libs/ethers/4.0.7/js/ethers.min.js"></script>
 <script src="https://cdn.0net.io/libs/moment/2.22.2/js/moment.min.js"></script>
 <script src="https://cdn.0net.io/libs/numeral/2.0.6/js/numeral.min.js"></script>
+<script src="https://unpkg.com/vue-snotify@latest/vue-snotify.min.js"></script>
 
 <!-- UIkit JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.2.0/js/uikit.min.js"></script>
